--- a/style.css
+++ b/style.css
@@ -25,8 +25,16 @@ header{
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
+    animation: zoom 25s;
 
-
+}
+@keyframes zoom {
+    0%{
+        transform: scale(1.3)
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 .banner{
     position: absolute;
@@ -42,12 +50,43 @@ header{
     text-shadow: .3rem .4rem 2px rgba(0,0,0,.4)
     line-height: 3.5rem;
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
 }
+
+
 
 .banner p{
     font-family: "josefin Slab", serif;
     color: #ffffff;
     font-size: 2rem;
-    text-shadow: .2rem
+    text-shadow: .2rem .2rem rgba(0,0,0, .4);
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+}
 
+.banner button{
+    font-family: "Muli", serif;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .1rem; 
+    background: #6a3093; 
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to left, #a044ff, #6a3093);
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
+}
+
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem);
+    }
+    100%{
+        transform: translateY()
+    }
 }
