--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     --font-action: "Mulish", serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 .hamburguer{
     
     width: 2rem;
@@ -121,10 +125,10 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: var(--font-primary)
-    font-weight: 200;
-    text-shadow: .3rem .4rem 2px rgba(0,0,0,.4)
-    line-height: 3.5rem;
+    font-family: var(--font-primary);
+    height: 200;
+    text-shadow: .3rem .4rem 2px rgba(0,0,0,.4);
+    height: 3.5rem;
     margin-bottom: 2rem;
     opacity: 0;
     animation: moveBanner 1s 0.5s forwards;
@@ -176,6 +180,7 @@ header{
     top: 0;
     right: -20rem;
     transition: all 1s;
+    z-index: 150;
 }
 
 .show-menu .sidebar{
@@ -287,13 +292,13 @@ header{
 }
 
 .conhecimento-header h3{
-    font-family: var(--font--secundary);
+    font-family: var(--font-secundary);
     font-size: 2rem;
     padding-left: 1rem;
 }
 
 .conhecimento-text{
-    font-family: var(--font--secundary);
+    font-family: var(--font-secundary);
     margin-top: 1rem;
 }
 
@@ -349,20 +354,20 @@ header{
 }
 
 .card-info h2{
-    font-family: var(--font--primary);
+    font-family: var(--font-primary);
     font-size: 2rem;
     font-weight: 500;
     color: #eee;
 }
 
 .card-info h3{
-    font-family: var(--font--action);
+    font-family: var(--font-action);
     font-weight: bolder;
     color: #ff4081;
 }
 
 .card-info p{
-    font-family: var(--font--secundary);
+    font-family: var(--font-secundary);
     color: #eee;
     width: 80%;
 }
@@ -430,7 +435,7 @@ header{
 .sessao-contato h1{
     width: 100%;
     text-align: center;
-    font-family: var(--font--primary);
+    font-family: var(--font-primary);
     color: #272727;
     font-size: 3rem;
     font-weight: lighter;
@@ -452,7 +457,7 @@ header{
     border: none;
     width: 20rem;
     font-size: 1.5rem;
-    font-family: var(--font--secundary);
+    font-family: var(--font-secundary);
     border-bottom: 1px dashed #636363;
     height: 3rem;
     outline: none;
@@ -462,7 +467,7 @@ header{
     position: absolute;
     left: 0;
     top: 2rem;
-    font-family: var(--font--secundary);
+    font-family: var(--font-secundary);
     text-transform: uppercase;
     transition: all 0.3s;
 }
@@ -490,7 +495,7 @@ header{
 .sessao-cotacao{
     width: 100%;
     height: 100vh;
-    background: url("./imagens//bg-cotacao.jpg");
+    background: url("./imagens/bg-cotacao.jpg");
     object-fit: cover;
 }
 
@@ -528,9 +533,8 @@ header{
 }
 
 .sessao-cotacao label{
-    font-family: var(--font-secundary);
+    font-family: var(--font-action);
     font-size: 1.5rem;
-    font-weight: bold;
 }
 
 .sessao-cotacao input[type="number"]{
@@ -550,6 +554,53 @@ header{
     grid-column: 2;
 }
 
+footer{
+    width: 100%;
+    height: 7rem;
+    background-color: #17181b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content p{
+    font-family: var(--font-secundary);
+    color: #a7a7a7;
+    font-size: 1.2rem;
+}
+
+.social-list a{
+    margin: 0 2rem;
+    color: #a7a7a7;
+    font-size: 1.3rem;
+}
+
+.social-list ul {
+    display: flex;
+}
+
+#link-topo{
+    position: fixed;
+    right: 3rem;
+    bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to left, #a044ff, #6a3093);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: .3rem;
+    box-shadow: 0 0.1rem 0.6rem #00000009;
+}
 
 
 
